--- a/styles_cards.css
+++ b/styles_cards.css
@@ -59,6 +59,7 @@ body {
     position: absolute;
     bottom: 80px; /* Position von unten */
     left: 7%;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 1);
 }
 
 .btn-container {
